[gd_scene load_steps=4 format=3 uid="uid://bk7eo8wv4xoxl"]

[ext_resource type="Script" path="res://Scripts/saveSelect.gd" id="1_uh4pq"]
[ext_resource type="Theme" uid="uid://cn7u13qw5ptim" path="res://assets/UI.tres" id="2_3m6q3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynqdj"]
border_width_left = 14

[node name="saveSelect" type="Node2D"]
script = ExtResource("1_uh4pq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 305.0
offset_right = 40.0
offset_bottom = 345.0
theme = ExtResource("2_3m6q3")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 2
offset_right = 960.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ynqdj")

[node name="deleteSave1" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_top = -169.0
offset_right = 320.0
offset_bottom = -138.0
text = "delete save 1"

[node name="deleteSave2" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_left = 320.0
offset_top = -169.0
offset_right = 640.0
offset_bottom = -138.0
text = "delete save 2"

[node name="deleteSave3" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_left = 640.0
offset_top = -169.0
offset_right = 960.0
offset_bottom = -138.0
text = "delete save 3"

[node name="save1" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_top = -97.0
offset_right = 960.0
offset_bottom = -66.0
text = "save 1"

[node name="save2" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_top = -68.0
offset_right = 960.0
offset_bottom = -37.0
text = "save 2"

[node name="save3" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_top = -37.0
offset_right = 960.0
offset_bottom = -6.0
text = "save 3"

[node name="back" type="Button" parent="Control/Panel"]
z_index = 1
layout_mode = 2
offset_top = -305.0
offset_right = 45.0
offset_bottom = -274.0
text = "back"

[node name="levelLabel" type="Label" parent="Control/Panel"]
z_index = 2
offset_left = 72.0
offset_top = -97.0
offset_right = 272.0
offset_bottom = -9.0

[node name="bestTime" type="Label" parent="Control/Panel"]
z_index = 2
offset_left = 328.0
offset_top = -305.0
offset_right = 640.0
offset_bottom = -279.0
text = "best time: "

[node name="timeLabel" type="Label" parent="Control/Panel"]
z_index = 2
layout_mode = 0
offset_left = 688.0
offset_top = -97.0
offset_right = 888.0
offset_bottom = -9.0

[connection signal="pressed" from="Control/Panel/deleteSave1" to="." method="_on_delete_save_1_pressed"]
[connection signal="pressed" from="Control/Panel/deleteSave2" to="." method="_on_delete_save_2_pressed"]
[connection signal="pressed" from="Control/Panel/deleteSave3" to="." method="_on_delete_save_3_pressed"]
[connection signal="pressed" from="Control/Panel/save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Control/Panel/save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Control/Panel/save3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="Control/Panel/back" to="." method="_on_back_pressed"]
